--- a/about.html
+++ b/about.html
@@ -3,15 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>H-Thai-ML</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- ABOUT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <nav>
+            <ul>
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About us</a>
+                <a href="./contact.html">Contact us</a>
+                <a href="./menu.html">Our Menu</a>
+            </ul>
+        </nav>
+        <img src="./assets/images/banner.png" alt="Banner Image">
+    </div>
     <main>
         <!-- About page code here -->
+        <h1>About Us</h1>
+        <h2>Locations</h2>
+            <ul>
+                <li>Hershey, Pennsylvania</li>
+                <li>Orlando, Florida</li>
+                <li>Los Angeles, California</li>
+                <li>Rockwall, Texas</li>
+            </ul>
+        <h2>Origin Story</h2>
+            <img src="./assets/images/about.jpg" alt="about us">
+            <p>Hershey, Pennsylvania, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tristique senectus et netus et. Rhoncus urna neque viverra justo nec ultrices. Augue neque gravida in fermentum et sollicitudin ac. Morbi tincidunt ornare massa eget egestas purus.</p>
     </main>
 </body>
 </html>
