--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- Remember to link to your CSS file! -->
+    <title>H-Thai-ML</title>
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
 </head>
 <body>
     <!-- CONTACT PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <nav>
+            <ul>
+                <a href="./index.html">Home</a>
+                <a href="./about.html">About us</a>
+                <a href="./contact.html">Contact us</a>
+                <a href="./menu.html">Our Menu</a>
+            </ul>
+        </nav>
+        <img src="./assets/images/banner.png" alt="Banner Image">
+    </div>
     <main>
         <h2>Hours of Operation</h2>
         <p>
@@ -20,8 +29,20 @@
         </p>
         <h2>Contact Info</h2>
         <p>
-            <strong>Phone Number:</strong> TBD
+            <strong>Phone Number: 704-202-8365</strong>
         </p>
+        <p>
+            <strong>Address: 241 Fontanna Blvd</strong>
+        </p>
+        <p>
+            <strong>Customer Service: HthaiMLservice@gmail.com</strong>
+            <link 
+                rel="stylesheet" 
+                href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+                integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+                 crossorigin="anonymous"/>
+        </p>
+        
     </main>
 </body>
 </html>
