--- a/index.html
+++ b/index.html
@@ -8,11 +8,32 @@
 </head>
 <body>
     <!-- HOME PAGE -->
-    <!-- TODO: Navbar here -->
-    <!-- TODO: Banner Image here-->
+    <div id="banner">
+        <nav>
+            <ul>
+                <a href=".index.html">Home</a>
+                <a href="./about.html">About us</a>
+                <a href="./contact.html">Contact us</a>
+                <a href="./menu.html">Our Menu</a>
+            </ul>
+        </nav>
+        <img src="./assets/images/banner.png" alt="Banner Image">
+        
+    </div>
     <main>
         <h1>H-Thai-ML</h1>
         <!-- TODO: Home page code here-->
+        <h2>Thai food prepared fresh every time</h2>
+            <div class="service">
+                <h3>Dine In</h3>
+            </div>
+            <div class="service">
+                <h3>Take Out</h3>
+            </div>
+            <div class="service">
+                <h3>Delivery</h3>
+            </div>
+        <img src="./assets/images/table-in-restaurant.jpg" alt="Restaurant Layout">
     </main>
 </body>
 </html>
