added font awesome icons to contact page

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>H-Thai-ML</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link 
+        rel="stylesheet" 
+        href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+        crossorigin="anonymous"/>
 </head>
 <body>
     <!-- CONTACT PAGE -->
@@ -36,12 +41,14 @@
         </p>
         <p>
             <strong>Customer Service: HthaiMLservice@gmail.com</strong>
-            <link 
-                rel="stylesheet" 
-                href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
-                integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
-                 crossorigin="anonymous"/>
         </p>
+        <span class="icons">
+            <i class="fas fa-phone"></i>
+            <i class="fas fa-envelope"></i>
+            <i class="fas fa-location-arrow"></i>
+            <i class="fas fa-"></i>
+
+        </span>
         
     </main>
 </body>
